<resources>
    <string name="app_name">Test Skill</string>
    <string name="activity_login">Login</string>
    <string name="activity_register">Register</string>
    <string name="activity_edit">Edit</string>
    <string name="activity_home">Home</string>
    <string name="activity_albums">Albums</string>

    <!-- Strings related to login -->
    <string name="button_add_new">+</string>
    <string name="label_user_name">Logged in as:</string>
    <string name="label_wrong_login">Wrong email or password.</string>
    <string name="prompt_email">Login (email)</string>
    <string name="prompt_filter">Type here to filter…</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_new_user">New User</string>
    <string name="action_register">Register</string>
    <string name="action_save">Save</string>
    <string name="action_sign_in">Sign In</string>
    <string name="error_empty_email">Email address is empty</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_name">The written name is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_empty_password">Password field is empty</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_settings">Settings</string>
    <string name="options_menu_home">Home</string>
    <string name="options_menu_albums">Albums</string>

</resources>
